# libcomm

./: CMakeLists.txt  README.md  comm-config.cmake
cmake/: comm-config.cmake
include/: comm.h  net_util.h
src/: comm.c  net_util.c
test/: CMakeLists.txt  comm_test.c
