add_executable(comm_test comm_test.c)
target_link_libraries(comm_test ${CLOG_LIBS})
target_link_libraries(comm_test comm)
add_test(NAME comm_connection_test COMMAND comm_test connection)
add_test(NAME comm_write_test COMMAND comm_test write)
add_test(NAME comm_read_test COMMAND comm_test write)
enable_testing()